# mp3-magic-machine

./: Cargo.toml  README.md  index.html
.github/workflows/: build.yml  deploy.yml  rust.yml  static.yml
magic_lambda/: Cargo.toml  README.md
magic_lambda/src/: event_handler.rs
wav_to_mp3/: Cargo.toml
wav_to_mp3/src/: lib.rs  main.rs  mp3_encode_i16.rs
