[package]
name = "magic_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.17" , features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.77.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

wav_to_mp3 = { path = "../wav_to_mp3" }
